--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,10 @@ nav ul li a{
     font-size: 20px;
 }
 
+nav ul li a:hover{
+    color: red;
+}
+
 section.sec1{
     width: 100%;
     height: 100vh;
@@ -62,4 +66,32 @@ section.sec1{
     font-size: 25px;
     text-align: center;
     color: aliceblue;
+}
+
+section.sec1 img{
+    padding: 80px 0px 0px 49%;
+}
+
+section.sec2{
+    width: 100%;
+    height: 20vh;
+    background: #d1c9b5;
+    padding: 60px;
+    font-size: 20px;
+    font-family: 'Roboto', sans-serif;
+}
+
+section.sec2 input{
+    margin-left: 40px;
+}
+
+section.sec2 .category-button{
+    background-color: #5e0507;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    font-size: 16px;
+    float: right;
 }
