--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,17 @@ nav .logo
 
 nav .logo img{
     height: 80px;
+    transition: .5s;
+}
+
+nav.black{
+    background: rgba(0,0,0,.8);
+    height: 90px;
+    padding: 10px 50px;
+}
+
+nav.black logo img{
+    height: 60px;
 }
 
 nav ul{
@@ -69,7 +80,7 @@ section.sec1{
 }
 
 section.sec1 img{
-    padding: 80px 0px 0px 49%;
+    padding: 70px 0px 0px 49%;
 }
 
 section.sec2{
@@ -95,3 +106,23 @@ section.sec2 .category-button{
     font-size: 16px;
     float: right;
 }
+
+section.sec3 {
+    margin-top: 4%;
+    margin-left: 8%;
+    margin-bottom: 4%;
+}
+
+h3 {
+    width:80%; 
+    text-align:left; 
+    border-bottom: 3px double grey; 
+    line-height:0.1em; 
+    margin:10px 0 20px; 
+} 
+
+h3 span { 
+    background:#fff; 
+    padding:0 30px; 
+}
+
