--- a/css/style.css
+++ b/css/style.css
@@ -114,9 +114,9 @@ section.sec3 {
 }
 
 h3 {
-    width:80%; 
+    width:87%; 
     text-align:left; 
-    border-bottom: 3px double grey; 
+    border-bottom: 3px solid grey; 
     line-height:0.1em; 
     margin:10px 0 20px; 
 } 
@@ -126,3 +126,43 @@ h3 span {
     padding:0 30px; 
 }
 
+.column {
+    background-color:#ccc;;
+    float: left;
+    width: 20.33%;
+    padding: 10px;
+    margin-left: 5%;
+    margin-right: 5%;
+    height: 300px; 
+}
+
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+select{
+    border: none;
+    font-size: 15px;
+}
+
+.column:hover{
+    border-style: solid; 
+    border-color: #cc9966;
+}
+
+.column img{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}   
+ 
+.column .price-location {
+    float: right;
+    color: black;
+}
+
+.column .item-name{
+    color: #cc9966;
+}
