--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ nav{
     left: 0;
     width: 100%;
     height: 100px;
-    padding: 40px 100px;
+    padding: 30px 90px;
     box-sizing: border-box;
 }
 
@@ -21,13 +21,13 @@ nav .logo
 }
 
 nav .logo img{
-    height: 80px;
+    height: 60px;
     transition: .5s;
 }
 
 nav.black{
     background: rgba(0,0,0,.8);
-    height: 90px;
+    height: 80px;
     padding: 10px 50px;
 }
 
@@ -66,10 +66,10 @@ section.sec1{
 }
 
 #slogan{
-    font-size: 85px;
+    font-size: 75px;
     text-align: center;
     color: aliceblue;
-    padding-top: 19%;
+    padding-top: 15%;
 }
 
 #detailed-slogan{
@@ -80,12 +80,14 @@ section.sec1{
 }
 
 section.sec1 img{
-    padding: 70px 0px 0px 49%;
+    padding: 50px 0px 0px 49%;
 }
+
+/* ____________________________ Men, Women and Children Categorization __________________________ */
 
 section.sec2{
     width: 100%;
-    height: 20vh;
+    height: 25vh;
     background: #d1c9b5;
     padding: 60px;
     font-size: 20px;
@@ -100,12 +102,14 @@ section.sec2 .category-button{
     background-color: #5e0507;
     border: none;
     color: white;
-    padding: 15px 32px;
+    padding: 10px 32px;
     text-align: center;
     text-decoration: none;
     font-size: 16px;
     float: right;
 }
+
+/* __________________________________ Male products items section ___________________________________ */
 
 section.sec3 {
     margin-top: 4%;
@@ -118,7 +122,7 @@ h3 {
     text-align:left; 
     border-bottom: 3px solid grey; 
     line-height:0.1em; 
-    margin:10px 0 20px; 
+    margin: 2% 0 4%; 
 } 
 
 h3 span { 
@@ -144,7 +148,32 @@ h3 span {
 
 select{
     border: none;
-    font-size: 15px;
+    font-size: 13px;
+}
+
+.column .dots{
+    float: right;
+}
+
+.column .dots #dot,
+.column .dots #dot1,
+.column .dots #dot2{
+    height: 20px;
+    width: 20px;
+    border-radius: 50%;
+    display: inline-block;
+}
+
+.column .dots #dot{
+    background-color: green;
+}
+
+.column .dots #dot1{
+    background-color: blue;
+}
+
+.column .dots #dot2{
+    background-color: #3b3c3d;
 }
 
 .column:hover{
@@ -165,4 +194,5 @@ select{
 
 .column .item-name{
     color: #cc9966;
+    margin-top: 30px;
 }
