--- a/css/style.css
+++ b/css/style.css
@@ -80,14 +80,14 @@ section.sec1{
 }
 
 section.sec1 img{
-    padding: 50px 0px 0px 49%;
+    padding: 6% 0px 0px 49%;
 }
 
 /* ____________________________ Men, Women and Children Categorization __________________________ */
 
 section.sec2{
     width: 100%;
-    height: 25vh;
+    height: 24vh;
     background: #d1c9b5;
     padding: 60px;
     font-size: 20px;
@@ -117,15 +117,15 @@ section.sec3 {
     margin-bottom: 4%;
 }
 
-h3 {
+#men-category {
     width:87%; 
     text-align:left; 
     border-bottom: 3px solid grey; 
     line-height:0.1em; 
-    margin: 2% 0 4%; 
+    margin: 4% 0 3%; 
 } 
 
-h3 span { 
+#men-category span { 
     background:#fff; 
     padding:0 30px; 
 }
@@ -138,6 +138,10 @@ h3 span {
     margin-left: 5%;
     margin-right: 5%;
     height: 300px; 
+}
+
+.sec3 .counter{
+    transform: translate(85%, 0%);
 }
 
 .row:after {
@@ -157,7 +161,8 @@ select{
 
 .column .dots #dot,
 .column .dots #dot1,
-.column .dots #dot2{
+.column .dots #dot2,
+.column .dots #dot3{
     height: 20px;
     width: 20px;
     border-radius: 50%;
@@ -195,4 +200,62 @@ select{
 .column .item-name{
     color: #cc9966;
     margin-top: 30px;
+}
+
+/* ________________________ Women category items___________________________ */
+
+#women-category {
+    width: 87%; 
+    text-align:right; 
+    border-bottom: 3px solid grey; 
+    line-height:0.1em; 
+    margin: 4% 0 2% 3%; 
+} 
+
+#women-category span{
+    background:#fff; 
+    padding: 0px 30px;
+}
+
+.sec3 .counter2{
+    transform: translate(4%, 0%);
+}
+
+.column .dots #dot3{
+    background-color: #f87ab9;
+}
+
+/* _________________________________About Section ____________________________________ */
+
+section.sec4{
+    background: url(assets/backgrounds/about.jpg);
+    width: 100%;
+    height: 50.5vh;
+    padding: 10px;
+}
+
+
+fieldset.about-border {
+    border: 3px solid rgba(114, 85, 41, 0.938) !important;
+    width: 40%;
+    padding: 2.0em 4.4em 1.4em 8.4em !important;
+    margin: 5% 0 0 27% !important;
+    -webkit-box-shadow:  0px 0px 0px 0px #000;
+            box-shadow:  0px 0px 0px 0px #000;
+}
+
+legend.about-border {
+    font-size: 1.2em !important;
+    font-weight: bold !important;
+    text-align: center !important;
+    width:auto;
+    padding:0 10px;
+    border-bottom:none;
+    color: white;
+}
+
+#about-text{
+    color: white;
+    font-size: 20px;
+    text-align: center;
 }
