--- a/css/style.css
+++ b/css/style.css
@@ -237,16 +237,16 @@ section.sec4{
 
 fieldset.about-border {
     border: 3px solid rgba(114, 85, 41, 0.938) !important;
-    width: 40%;
-    padding: 2.0em 4.4em 1.4em 8.4em !important;
-    margin: 5% 0 0 27% !important;
+    width: 45%;
+    padding: 2.0em 5.4em 1.4em 5.4em !important;
+    margin: 3.5% 0 0 27% !important;
     -webkit-box-shadow:  0px 0px 0px 0px #000;
             box-shadow:  0px 0px 0px 0px #000;
 }
 
 legend.about-border {
-    font-size: 1.2em !important;
-    font-weight: bold !important;
+    font-size: 1.7em !important;
+    font-weight: 400 !important;
     text-align: center !important;
     width:auto;
     padding:0 10px;
@@ -258,4 +258,23 @@ legend.about-border {
     color: white;
     font-size: 20px;
     text-align: center;
+}
+
+/* _________________________________Promotion Section ____________________________________ */
+
+section.sec5{
+    width: 100%;
+    height: 10vh;
+    background: #534e58;
+    font-size: 15px;
+    padding: 1.3em 0 .5px 10%;
+}
+
+section.sec5 #promotion img{
+    margin-right: 5vh;
+}
+
+section.sec5 #promotion{
+    float: left;
+    color: white;
 }
