--- a/css/style.css
+++ b/css/style.css
@@ -351,3 +351,28 @@ footer p{
     margin: 4.0em auto;
     width: 20%;
 }
+
+/* ________________________________Actionable Feedback edit _________________________________________ */
+
+.cd-add-to-cart {
+    display: inline-block;
+    margin-top: 1.0em;
+    padding: 0.7em 1.0em;
+    background: #2c97de;
+    border-radius: 50em;
+    text-transform: uppercase;
+    color: #ffffff;
+    font-weight: 700;
+    letter-spacing: .1em;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+    -webkit-transition: all .2s;
+    transition: all .2s;
+}
+.cd-add-to-cart:hover {
+    background: #06c916;
+}
+.cd-add-to-cart:active {
+    -webkit-transform: scale(0.5);
+        -ms-transform: scale(0.5);
+            transform: scale(0.5);
+}
