--- a/css/cart.css
+++ b/css/cart.css
@@ -74,9 +74,27 @@
             transform: translateX(-50%) translateY(-50%);
     height: 100%;
     width: 100%;
-    background: url(../img/cd-icons-cart-close.svg) no-repeat 0 0;
+    background: url(img/cd-icons-cart-close.svg) no-repeat 0 0;
     -webkit-transition: opacity .2s, -webkit-transform .2s;
     transition: opacity .2s, -webkit-transform .2s;
     transition: opacity .2s, transform .2s;
     transition: opacity .2s, transform .2s, -webkit-transform .2s;
+}
+
+.cd-cart-trigger::after {
+    /* 'X' icon */
+    background-position: -72px 0;
+    opacity: 0;
+    -webkit-transform: translateX(-50%) translateY(-50%) rotate(90deg);
+        -ms-transform: translateX(-50%) translateY(-50%) rotate(90deg);
+            transform: translateX(-50%) translateY(-50%) rotate(90deg);
+}
+.cart-open .cd-cart-trigger::before {
+    opacity: 0;
+}
+.cart-open .cd-cart-trigger::after {
+    opacity: 1;
+    -webkit-transform: translateX(-50%) translateY(-50%);
+        -ms-transform: translateX(-50%) translateY(-50%);
+            transform: translateX(-50%) translateY(-50%);
 }
